// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input SNAPSHOTS should render basic usage 1`] = `
<div>
  <div
    class="input-wrapper"
  >
    <div
      class="input-element-wrapper"
    >
      <input
        aria-invalid="false"
        class="input-element"
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input SNAPSHOTS should render different component states should render disabled 1`] = `
<div>
  <div
    class="input-wrapper"
  >
    <div
      class="input-element-wrapper disabled"
    >
      <input
        aria-invalid="false"
        class="input-element"
        disabled=""
        value=""
      />
    </div>
  </div>
</div>
`;

exports[`Input SNAPSHOTS should render value in controllable mode 1`] = `
<div>
  <div
    class="input-wrapper"
  >
    <div
      class="input-element-wrapper"
    >
      <input
        aria-invalid="false"
        class="input-element"
        value="test value"
      />
    </div>
  </div>
</div>
`;

exports[`Input SNAPSHOTS should render value in controllable mode 2`] = `
<div>
  <div
    class="input-wrapper"
  >
    <div
      class="input-element-wrapper"
    >
      <input
        aria-invalid="false"
        class="input-element"
        value="new test value"
      />
    </div>
  </div>
</div>
`;
